# STMBOY

./: .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  Makefile  README.md
.helix/: languages.toml
cmake/toolchain/: cm4-fpu.cmake  stm32f411.cmake  stm32f412.cmake
docs/: revision_arquitectura_stm32boy.html
lib/: CMakeLists.txt
lib/bsp/: CMakeLists.txt  bsp.c
lib/platform/: CMakeLists.txt  platform.h
lib/platform/TEST/: db70.c  db_lut.h  generate_lut.py
lib/platform/component/ili9486/: CMakeLists.txt  README.md  ili9486.c  ili9486.h
lib/platform/nucleof411re/: CMakeLists.txt  README.md  db_lut.h  platform_nucleof411re.c  platform_nucleof411re_clock.c  platform_nucleof411re_clock.h  platform_nucleof411re_ili9486.c  platform_nucleof411re_ili9486.h  platform_nucleof411re_serial.c  platform_nucleof411re_serial.h  stm32boy.c  stm32boy.h  systick.c  systick.h
source/: CMakeLists.txt  assert.c  main.c
